--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "apollo-link-http": "^1.5.17",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "evergreen-ui": "^4.28.0",
     "graphql": "^15.2.0",
     "install": "^0.13.0",
     "npm": "^6.14.5",
